# lockkey

./: Cargo.toml  README.md  bun.lockb  package.json  pnpm-lock.yaml  svelte.config.js  tailwind.config.js  vite.config.js
.github/workflows/: main.yml
src/: app.html  data.rs  encryption.rs  global.scss  lib.rs  main.rs  styles.css  tests.rs  theme.css  transition.js  types.ts  utils.ts
src-tauri/: .gitignore  Cargo.toml  locckey.secrets  lockkey.secrets  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: auth.rs  data.rs  encryption.rs  lib.rs  main.rs
src/assets/components/: AlertOverlay.svelte  Loader.svelte  Navbar.svelte  PopupMsgOverlay.svelte  SessionHandler.svelte  SmallLoader.svelte
src/assets/scss/: _fonts.scss  _utils.scss  _variables.scss  styles.scss
src/assets/ts/: alertMsgStore.ts  popupMsgStore.ts  types.ts  userPrefs.ts  utils.ts
src/routes/: +layout.svelte  +layout.ts  +page.svelte  AlertOverlay.svelte  ListItems.svelte  Loader.svelte  PopupMsgOverlay.svelte  PopupOverlay.svelte  SessionHandler.svelte  SmallLoader.svelte
src/routes/edit_secret/: +page.svelte  CheckBox.svelte  PasswordInput.svelte  Slider.svelte  TextInput.svelte  TypeSelection.svelte
src/routes/login/: +page.svelte
src/routes/new/: +page.svelte
src/routes/new_account/: +page.svelte
src/routes/new_secret/: +page.svelte  PasswordInput.svelte
src/routes/secrets/: +page.svelte  FilterButton.svelte  ListItem.svelte  ListItems.svelte
src/routes/view_secret/: +page.svelte
